# hyperion

./: .gdb_history  .gdbinit  .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  TODO.md  build.rs  crates.js  flake.nix  help.html  qemu.mk  rust-toolchain.toml  rustc-ice-2024-03-19T19_04_05-339583.txt  rustc-ice-2024-03-19T19_07_31-345294.txt  search-index.js  settings.html  src-files.js
.cargo/: config.toml  runner.sh
.direnv/: flake-profile-1-link
.helix/: languages.toml
anstream/: all.html  enum.ColorChoice.html  fn.stderr.html  fn.stdout.html  index.html  macro.eprint.html  macro.eprintln.html  macro.panic.html  macro.print.html  macro.println.html  struct.AutoStream.html  struct.StripStream.html
anstyle/: all.html  enum.AnsiColor.html  enum.Color.html  index.html  struct.Ansi256Color.html  struct.EffectIter.html  struct.Effects.html  struct.Reset.html  struct.RgbColor.html  struct.Style.html
anstyle_parse/: all.html  index.html  struct.AsciiParser.html  struct.Params.html  struct.ParamsIter.html  struct.Parser.html  struct.Utf8Parser.html  trait.CharAccumulator.html  trait.Perform.html  type.DefaultCharAccumulator.html
anstyle_query/: all.html  fn.clicolor.html  fn.clicolor_force.html  fn.is_ci.html  fn.no_color.html  fn.term_supports_ansi_color.html  fn.term_supports_color.html  fn.truecolor.html  index.html
arrayref/: all.html  index.html  macro.array_mut_ref.html  macro.array_ref.html  macro.array_refs.html  macro.mut_array_refs.html
arrayvec/: all.html  index.html  struct.ArrayString.html  struct.ArrayVec.html  struct.CapacityError.html  struct.Drain.html  struct.IntoIter.html
bit_field/: all.html  index.html  trait.BitArray.html  (+1 more)
crates/arch-x86_64/: Cargo.toml
crates/arch-x86_64/src/: address.rs  context.rs  lib.rs  paging.rs  pmm.rs  stack.rs  syscall.rs  tls.rs  vmm.rs
crates/arch-x86_64/src/cpu/: gdt.rs  idt.rs  ints.rs  mod.rs  tss.rs
crates/backtrace/: Cargo.toml
crates/backtrace/src/: lib.rs
crates/boot/: Cargo.toml
crates/boot-limine/: Cargo.toml
crates/boot-limine/src/: Makefile  addr.rs  framebuffer.rs  kernel.rs  lib.rs  link.ld  mem.rs  module.rs  rsdp.rs  smp.rs
crates/boot/src/: args.rs  lib.rs
crates/boot/src/bootboot/: mod.rs
crates/driver-acpi/: Cargo.toml
crates/driver-acpi/src/: apic.rs  hpet.rs  ioapic.rs  lib.rs  madt.rs  rsdp.rs  rsdt.rs
crates/driver-framebuffer/: Cargo.toml
crates/driver-framebuffer/src/: lib.rs
crates/driver-pic/: Cargo.toml
crates/driver-pic/src/: lib.rs
crates/driver-pit/: Cargo.toml
crates/driver-pit/src/: lib.rs
crates/driver-ps2/: Cargo.toml
crates/driver-ps2/src/: keyboard.rs  lib.rs  mouse.rs
crates/driver-rtc/: Cargo.toml
crates/driver-rtc/src/: lib.rs
crates/drivers/: Cargo.toml
crates/drivers/src/: hpet.rs  input.rs  lib.rs  log.rs  null.rs  rand.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs  mpmc.rs
crates/events/src/keyboard/: buffer.rs  decode.rs  event.rs  mod.rs
crates/events/src/mouse/: buffer.rs  decode.rs  mod.rs
crates/events/src/timer/: mod.rs
crates/framebuffer/: Cargo.toml  build.rs
crates/framebuffer/src/: font.rs  framebuffer.rs  lib.rs  logger.rs
crates/futures/: Cargo.toml
crates/futures/src/: block.rs  executor.rs  keyboard.rs  lazy.rs  lib.rs  lock.rs  map.rs  mouse.rs  mpmc.rs  task.rs  timer.rs
crates/kernel/: Cargo.toml  build.rs
crates/kernel-impl/: Cargo.toml
crates/kernel-impl/src/: initfs.rs  lib.rs  procfs.rs  sysfs.rs
crates/kernel-impl/src/procfs/: sysctl.rs
crates/kernel/src/: backtrace.rs  log.rs  main.rs  panic.rs  smp.rs  splash  syscall.rs  testfw.rs
crates/kernel/src/arch/x86_64/: mod.rs  vmm.rs
crates/kernel/src/arch/x86_64/cpu/: idt.rs  ints.rs  mod.rs
crates/kernel/src/boot/: args.rs  mod.rs
crates/kernel/src/boot/limine/: addr.rs  framebuffer.rs  kernel.rs  mem.rs  mod.rs  rsdp.rs  smp.rs  term.rs
crates/kernel/src/boot/multiboot2/: mod.rs
crates/kernel/src/driver/: mod.rs  pic.rs  pit.rs  qemu.rs  rtc.rs
crates/kernel/src/driver/acpi/: apic.rs  hpet.rs  ioapic.rs  mod.rs  rsdp.rs  rsdt.rs
crates/kernel/src/driver/ps2/: keyboard.rs
crates/kernel/src/driver/video/: color.rs  framebuffer.rs  logger.rs
crates/kernel/src/mem/: mod.rs  pmm.rs  vmm.rs
crates/kernel/src/scheduler/: executor.rs  keyboard.rs  task.rs  timer.rs
crates/kernel/src/scheduler/kshell/: mod.rs  shell.rs  term.rs
crates/kernel/src/term/escape/: decode.rs
crates/kernel/src/util/: fmt.rs  instant.rs  int_safe_lazy.rs  mod.rs  slice_read.rs  static_str.rs
crates/kernel/src/vfs/: mod.rs  path.rs
crates/keyboard/: Cargo.toml
crates/keyboard/src/: decode.rs  event.rs  lib.rs
crates/kshell/: Cargo.toml  build.rs
crates/kshell/src/: cmd.rs  lib.rs  shell.rs  snake.rs  term.rs
crates/loader/: Cargo.toml
crates/loader/src/: elf_wrap.rs  lib.rs
crates/log/: Cargo.toml
crates/log-multi/: Cargo.toml
crates/log-multi/src/: lib.rs
crates/log/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/mem/: Cargo.toml
crates/mem/src/: buf.rs  frame_alloc.rs  lib.rs  pmm.rs  slab.rs  vmm.rs
crates/random/: Cargo.toml
crates/random/src/: lib.rs
crates/ring/: Cargo.toml
crates/ring/fuzz/: Cargo.toml
crates/ring/fuzz/fuzz_targets/: fuzz_target_1.rs
crates/ring/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: buf.rs  cleanup.rs  condvar.rs  executor.rs  futex.rs  ipc.rs  keyboard.rs  lib.rs  lock.rs  mpmc.rs  named_lock.rs  page_fault.rs  proc.rs  process.rs  sleep.rs  task.rs  timer.rs
crates/scheduler/src/ipc/: pipe.rs
crates/scheduler/src/kshell/: shell.rs
kernel/: .dir-locals.el  Cargo.toml  build.rs  riscv64.ld
kernel/src/: backtrace.rs  cfg.rs  fdt.rs  framebuffer.rs  idt.rs  instructions.rs  logger.rs  main.rs  panic.rs  syscall.rs
kernel/src/arch/x86_64/: mod.rs  vmm.rs
kernel/src/driver/: mod.rs  pit.rs
kernel/src/driver/acpi/: madt.rs  mod.rs  rsdp.rs
loader/: Cargo.toml  build.rs  riscv64.ld
loader/src/: fdt.rs  logger.rs  main.rs
os/: .dir-locals.el  Cargo.toml  build.rs
os/src/: main.rs
(+8554 files in other folders)
