[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["crates/*"]

[profile.release]
debug = true
strip = false

[profile.release-lto]
inherits = "release"
opt-level = 3
codegen-units = 4
lto = true
strip = true

[workspace.dependencies]
spin = "0.9"
volatile = "0.5"
x86_64 = "0.14"
uart_16550 = "0.3"
#pc-keyboard = "0.7"
pc-keyboard = { git = "https://github.com/rust-embedded-community/pc-keyboard", rev = "4aa5ef6d41fead096c96879ca53497c9ec4ffc30" }
paste = "1.0"       # macro ident concat
bit_field = "0.10"
bytemuck = { version = "1.13", features = ["derive"] }
# rpds = { version = "1.1", default-features = false }
# image = "0.24"
# bitvec = "1.0.1"
# tracing = { version = "0.1.37", default-features = false }

# backtrace symbol lookup
[workspace.dependencies.elf]
version = "0.7"
default-features = false

[workspace.dependencies.smallvec]
version = "1.10"
features = ["const_generics"]

[workspace.dependencies.time]
version = "0.3"
default-features = false
# features = ["alloc"]

[workspace.dependencies.crossbeam-queue]
version = "0.3"
default-features = false
features = ["alloc"]

[workspace.dependencies.crossbeam]
version = "0.8"
default-features = false
features = ["alloc"]

[workspace.dependencies.futures-util]
version = "0.3"
default-features = false
features = ["alloc"]

# no_std thiserrror alternative
[workspace.dependencies.snafu]
version = "0.7"
default-features = false
features = ["rust_1_46"]

# backtracing with DWARF
# [workspace.dependencies.gimli]
# version = "0.28"
# default-features = false
# features = ["read"]
