[workspace.package]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["kernel"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "forbid"

[profile.release]
debug = true
strip = false

[profile.release-lto]
inherits = "release"
opt-level = 3
codegen-units = 4
lto = true
strip = true

# keep all dependencies here to keep the version same and make it easier to keep them up to date

[workspace.dependencies]
spin = "0.9"
heapless = "0.8"
