[workspace.package]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["crates/*", "kernel", "loader"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "forbid"

[profile.release]
debug = true
strip = false

[profile.release-lto]
inherits = "release"
opt-level = 3
codegen-units = 4
lto = true
strip = true

# keep all dependencies here to keep the version same and make it easier to keep them up to date

[workspace.dependencies] # all dependencies is split into 3 groups
# external dependencies, from crates.io
spin = "0.9"
heapless = "0.8"
xmas-elf = "0.9" # or elf
bitflags = "2.5"

# internal dependencies
devicetree.path = "./crates/devicetree"
loader-info.path = "./crates/loader-info"
log.path = "./crates/log"
mem.path = "./crates/mem"
riscv64-util.path = "./crates/riscv64-util"
riscv64-vmm.path = "./crates/riscv64-vmm"
syscon.path = "./crates/syscon"
uart-16550.path = "./crates/uart-16550"
util.path = "./crates/util"

# artifact (ELF) dependencies, for embedded binaries
kernel = { path = "./kernel", artifact = "bin" }
