[package]
name = "hyperion-kernel"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["limine"]
limine = []
bootboot = []
multiboot1 = []
multiboot2 = []
# Pick limine OR bootboot OR multiboot1 OR multiboot2, they conflict with eachother

[dependencies]
spin.workspace = true
x86_64.workspace = true
pc-keyboard.workspace = true
paste.workspace = true
bit_field.workspace = true
rustc-demangle.workspace = true
elf.workspace = true
smallvec.workspace = true
time.workspace = true
futures-util.workspace = true

# hyperion-arch.path = "../crates/arch"
hyperion-atomic-map.path = "../crates/atomic-map"
hyperion-boot.path = "../crates/boot"
hyperion-boot-interface.path = "../crates/boot-interface"
hyperion-bitmap.path = "../crates/bitmap"
hyperion-checked.path = "../crates/checked"
hyperion-clock.path = "../crates/clock"
hyperion-color.path = "../crates/color"
hyperion-drivers.path = "../crates/drivers"
hyperion-escape.path = "../crates/escape"
hyperion-framebuffer.path = "../crates/framebuffer"
hyperion-instant.path = "../crates/instant"
hyperion-int-safe-lazy.path = "../crates/int-safe-lazy"
hyperion-interrupts.path = "../crates/interrupts"
hyperion-keyboard.path = "../crates/keyboard"
hyperion-kernel-info.path = "../crates/kernel-info"
hyperion-kshell.path = "../crates/kshell"
hyperion-log.path = "../crates/log"
hyperion-log-multi.path = "../crates/log-multi"
hyperion-scheduler.path = "../crates/scheduler"
hyperion-static-str.path = "../crates/static-str"
hyperion-timer.path = "../crates/timer"
hyperion-vfs.path = "../crates/vfs"
hyperion-num-postfix.path = "../crates/num-postfix"
hyperion-macros.path = "../crates/macros"

[dependencies.hyperion-mem]
path = "../crates/mem"
features = ["set-allocator"]
