[package]
name = "hyperion-kernel"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["limine"]
limine = []
bootboot = []
multiboot1 = []
multiboot2 = []
# Pick limine OR bootboot OR multiboot1 OR multiboot2, they conflict with eachother

[dependencies]
spin.workspace = true
x86_64.workspace = true
time.workspace = true
futures-util.workspace = true

hyperion-arch.path = "../crates/arch"
hyperion-backtrace.path = "../crates/backtrace"
hyperion-boot-interface.path = "../crates/boot-interface"
hyperion-boot.path = "../crates/boot"
hyperion-color.path = "../crates/color"
hyperion-drivers.path = "../crates/drivers"
hyperion-framebuffer.path = "../crates/framebuffer"
hyperion-interrupts.path = "../crates/interrupts"
hyperion-kernel-info.path = "../crates/kernel-info"
hyperion-kshell.path = "../crates/kshell"
hyperion-log-multi.path = "../crates/log-multi"
hyperion-log.path = "../crates/log"
hyperion-random.path = "../crates/random"
hyperion-scheduler.path = "../crates/scheduler"

[dependencies.hyperion-mem]
path = "../crates/mem"
features = ["set-allocator"]
