[package]
name = "kernel"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
spin.workspace = true

devicetree.workspace = true
loader-info.workspace = true
log.workspace = true
mem.workspace = true
riscv64-util.workspace = true
riscv64-vmm.workspace = true
syscon.workspace = true
uart-16550.workspace = true
util.workspace = true
