[package]
name = "loader"
version.workspace = true
edition.workspace = true
default-run = "loader"

[dependencies]
spin.workspace = true
heapless.workspace = true
xmas-elf.workspace = true

devicetree.workspace = true
loader-info.workspace = true
log.workspace = true
mem.workspace = true
riscv64-vmm.workspace = true
util.workspace = true

kernel.workspace = true
