[package]
name = "hyperion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"

[build-dependencies]
hyperion_kernel = { path = "../kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.0"
