[package]
name = "hyperion-arch-x86_64"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin.workspace = true
x86_64.workspace = true

hyperion-boot-interface.path = "../boot-interface"
hyperion-boot.path = "../boot"
hyperion-drivers.path = "../drivers"
hyperion-interrupts.path = "../interrupts"
hyperion-log.path = "../log"
hyperion-macros.path = "../macros"
hyperion-mem.path = "../mem"
