[package]
name = "hyperion-arch-x86_64"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin.workspace = true
smallvec.workspace = true
x86_64.workspace = true
crossbeam.workspace = true
memoffset = { version = "0.9", features = ["unstable_const"] }

hyperion-boot-interface.path = "../boot-interface"
hyperion-boot.path = "../boot"
hyperion-driver-acpi.path = "../driver-acpi"
hyperion-interrupts.path = "../interrupts"
hyperion-log.path = "../log"
hyperion-macros.path = "../macros"
hyperion-mem.path = "../mem"
hyperion-cpu-id.path = "../cpu-id"
