[package]
name = "hyperion-backtrace"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf.workspace = true
rustc-demangle = "0.1"
spin.workspace = true
x86_64.workspace = true
# gimli.workspace = true

hyperion-boot.path = "../boot"
hyperion-escape.path = "../escape"
hyperion-log.path = "../log"
