[package]
name = "hyperion-boot-limine"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin.workspace = true
crossbeam.workspace = true
limine = "0.1"

hyperion-boot-interface.path = "../boot-interface"
hyperion-log.path = "../log"
