[package]
name = "hyperion-driver-acpi"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field.workspace = true
crossbeam.workspace = true
heapless.workspace = true
paste.workspace = true
spin.workspace = true
x86_64.workspace = true

hyperion-boot.path = "../boot"
hyperion-clock.path = "../clock"
hyperion-cpu-id.path = "../cpu-id"
hyperion-driver-pic.path = "../driver-pic"
hyperion-events.path = "../events"
hyperion-interrupts.path = "../interrupts"
hyperion-log.path = "../log"
hyperion-mem.path = "../mem"
hyperion-static-str.path = "../static-str"
