[package]
name = "hyperion-driver-framebuffer"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin.workspace = true
x86_64.workspace = true

hyperion-arch.path = "../arch"
hyperion-framebuffer.path = "../framebuffer"
hyperion-log.path = "../log"
hyperion-vfs.path = "../vfs"
hyperion-mem.path = "../mem"
