[package]
name = "hyperion-driver-pic"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin.workspace = true
x86_64.workspace = true

hyperion-log.path = "../log"
hyperion-interrupts.path = "../interrupts"
