[package]
name = "hyperion-driver-pit"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin.workspace = true
x86_64.workspace = true

hyperion-clock.path = "../clock"
hyperion-driver-pic.path = "../driver-pic"
