[package]
name = "hyperion-driver-rtc"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin.workspace = true
time.workspace = true
x86_64.workspace = true

hyperion-log.path = "../log"
hyperion-vfs.path = "../vfs"
hyperion-macros.path = "../macros"
