[package]
name = "hyperion-drivers"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyperion-clock.path = "../clock"
hyperion-driver-acpi.path = "../driver-acpi"
hyperion-driver-framebuffer.path = "../driver-framebuffer"
#hyperion-driver-pic.path = "../driver-pic"
#hyperion-driver-pit.path = "../driver-pit"
hyperion-driver-ps2.path = "../driver-ps2"
hyperion-driver-rtc.path = "../driver-rtc"
hyperion-vfs.path = "../vfs"
hyperion-keyboard.path = "../keyboard"
