[package]
name = "hyperion-drivers"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#hyperion-driver-pic.path = "../driver-pic"
#hyperion-driver-pit.path = "../driver-pit"
hyperion-clock.path = "../clock"
hyperion-driver-acpi.path = "../driver-acpi"
hyperion-driver-framebuffer.path = "../driver-framebuffer"
hyperion-driver-ps2.path = "../driver-ps2"
hyperion-driver-rtc.path = "../driver-rtc"
hyperion-keyboard.path = "../keyboard"
hyperion-log.path = "../log"
hyperion-random.path = "../random"
hyperion-sync.path = "../sync"
hyperion-vfs.path = "../vfs"
