[package]
name = "hyperion-events"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["input-buffer"]
input-buffer = []

[dependencies]
event-listener.workspace = true
futures-util.workspace = true
heapless.workspace = true
pc-keyboard.workspace = true
pin-project.workspace = true
spin.workspace = true
bitflags.workspace = true

hyperion-log.path = "../log"
hyperion-instant.path = "../instant"

[lints]
workspace = true
