[package]
name = "hyperion-framebuffer"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin.workspace = true

hyperion-boot.path = "../boot"
hyperion-boot-interface.path = "../boot-interface"
hyperion-color.path = "../color"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["bmp"] }
proc-macro2 = "1.0"
quote = "1.0"
