[package]
name = "hyperion-futures"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-queue.workspace = true
event-listener.workspace = true
futures-util.workspace = true
futures.workspace = true
pin-project.workspace = true
spin.workspace = true
time.workspace = true
x86_64.workspace = true

#hyperion-backtrace.path = "../backtrace"
#hyperion-defer.path = "../defer"
hyperion-arch.path = "../arch"
hyperion-bitmap.path = "../bitmap"
hyperion-color.path = "../color"
hyperion-driver-acpi.path = "../driver-acpi"
hyperion-events.path = "../events"
hyperion-instant.path = "../instant"
hyperion-log.path = "../log"
hyperion-mem.path = "../mem"
hyperion-random.path = "../random"
hyperion-scheduler.path = "../scheduler"
