[package]
name = "hyperion-futures"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-queue.workspace = true
event-listener.workspace = true
futures-util.workspace = true
futures.workspace = true
spin.workspace = true
time.workspace = true

hyperion-arch.path = "../arch"
hyperion-events.path = "../events"
hyperion-instant.path = "../instant"

hyperion-log.path = "../log"
