[package]
name = "hyperion-kernel-impl"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin.workspace = true
lock_api.workspace = true
x86_64.workspace = true

hyperion-arch.path = "../arch"
hyperion-vfs.path = "../vfs"
hyperion-mem.path = "../mem"
hyperion-sync.path = "../sync"
hyperion-syscall.path = "../syscall"
hyperion-scheduler.path = "../scheduler"

