[package]
name = "hyperion-kernel-impl"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin.workspace = true
lock_api.workspace = true
x86_64.workspace = true

hyperion-arch.path = "../arch"
hyperion-log.path = "../log"
hyperion-mem.path = "../mem"
hyperion-scheduler.path = "../scheduler"
hyperion-sync.path = "../sync"
hyperion-syscall.path = "../syscall"
hyperion-vfs.path = "../vfs"

