[package]
name = "hyperion-kernel"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["limine"]
limine = []
bootboot = []
multiboot1 = []
multiboot2 = []
# Pick limine OR bootboot OR multiboot1 OR multiboot2, they conflict with eachother

[dependencies]
arcstr.workspace = true
crossbeam.workspace = true
lock_api.workspace = true
spin.workspace = true
time.workspace = true
x86_64.workspace = true

hyperion-arch.path = "../arch"
hyperion-backtrace.path = "../backtrace"
hyperion-boot-interface.path = "../boot-interface"
hyperion-boot.path = "../boot"
hyperion-color.path = "../color"
hyperion-cpu-id.path = "../cpu-id"
hyperion-defer.path = "../defer"
hyperion-drivers.path = "../drivers"
hyperion-framebuffer.path = "../framebuffer"
hyperion-futures.path = "../futures"
hyperion-instant.path = "../instant"
hyperion-interrupts.path = "../interrupts"
hyperion-kernel-impl.path = "../kernel-impl"
hyperion-kernel-info.path = "../kernel-info"
hyperion-kshell.path = "../kshell"
hyperion-log-multi.path = "../log-multi"
hyperion-log.path = "../log"
# hyperion-macros.path = "../macros"
hyperion-mem.path = "../mem"
hyperion-num-postfix.path = "../num-postfix"
hyperion-random.path = "../random"
hyperion-scheduler.path = "../scheduler"
hyperion-sync.path = "../sync"
hyperion-syscall.path = "../syscall"
hyperion-vfs.path = "../vfs"
