[package]
name = "hyperion-kernel"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["limine"]
limine = []
bootboot = []
multiboot1 = []
multiboot2 = []
# Pick limine OR bootboot OR multiboot1 OR multiboot2, they conflict with eachother

[dependencies]
time.workspace = true
x86_64.workspace = true

hyperion-arch.path = "../arch"
hyperion-boot.path = "../boot"
hyperion-cpu-id.path = "../cpu-id"
hyperion-defer.path = "../defer"
hyperion-instant.path = "../instant"
hyperion-kernel-impl.path = "../kernel-impl"
hyperion-kernel-info.path = "../kernel-info"
hyperion-log-multi.path = "../log-multi"
hyperion-log.path = "../log"
hyperion-mem.path = "../mem"
hyperion-random.path = "../random"
hyperion-scheduler.path = "../scheduler"
hyperion-sync.path = "../sync"
hyperion-syscall.path = "../syscall"

[build-dependencies]
bootstrap = { path = "../../userspace/bootstrap", artifact = "bin", target = "x86_64-unknown-none" }
