[package]
name = "keyboard"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-queue.workspace = true
futures-util.workspace = true

hyperion-int-safe-lazy.path = "../int-safe-lazy"
hyperion-log.path = "../log"
