[package]
name = "hyperion-kshell"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcstr.workspace = true
time.workspace = true
futures-util.workspace = true
snafu.workspace = true
spin.workspace = true
libm = "0.2"
glam = { version = "0.24", default-features = false, features = ["libm"] }
itertools = { version = "0.11", default-features = false }

hyperion-arch.path = "../arch"
hyperion-color.path = "../color"
hyperion-driver-acpi.path = "../driver-acpi"
hyperion-escape.path = "../escape"
hyperion-framebuffer.path = "../framebuffer"
hyperion-futures.path = "../futures"
hyperion-instant.path = "../instant"
hyperion-kernel-info.path = "../kernel-info"
hyperion-keyboard.path = "../keyboard"
hyperion-loader.path = "../loader"
hyperion-log-multi.path = "../log-multi"
hyperion-log.path = "../log"
hyperion-mem.path = "../mem"
hyperion-num-postfix.path = "../num-postfix"
hyperion-random.path = "../random"
hyperion-scheduler.path = "../scheduler"
hyperion-vfs.path = "../vfs"
hyperion-cpu-id.path = "../cpu-id"
hyperion-kernel-impl.path = "../kernel-impl"

hyperion-sample-elf = { path = "../sample-elf", artifact = "bin", target = "x86_64-unknown-none" }
