[package]
name = "hyperion-kshell"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
arcstr.workspace = true
futures-util.workspace = true
itertools = { version = "0.11", default-features = false }
lock_api.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
spin.workspace = true
time.workspace = true


hyperion-arch.path = "../arch"
hyperion-color.path = "../color"
hyperion-cpu-id.path = "../cpu-id"
hyperion-driver-acpi.path = "../driver-acpi"
hyperion-escape.path = "../escape"
hyperion-events.path = "../events"
hyperion-framebuffer.path = "../framebuffer"
hyperion-futures.path = "../futures"
hyperion-instant.path = "../instant"
hyperion-kernel-impl.path = "../kernel-impl"
hyperion-kernel-info.path = "../kernel-info"
hyperion-loader.path = "../loader"
hyperion-log-multi.path = "../log-multi"
hyperion-log.path = "../log"
hyperion-mem.path = "../mem"
hyperion-num-postfix.path = "../num-postfix"
hyperion-pci.path = "../pci"
hyperion-random.path = "../random"
hyperion-scheduler.path = "../scheduler"
hyperion-syscall.path = "../syscall"
hyperion-vfs.path = "../vfs"

fbtest = { path = "../../userspace/fbtest", artifact = "bin", target = "x86_64-unknown-none" }
sample-elf = { path = "../../userspace/sample-elf", artifact = "bin", target = "x86_64-unknown-none" }
coreutils = { path = "../../userspace/coreutils", artifact = "bin", target = "x86_64-unknown-none" }
