[package]
name = "hyperion-kshell"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
spin.workspace = true

hyperion-color.path = "../color"
hyperion-escape.path = "../escape"
hyperion-events.path = "../events"
hyperion-framebuffer.path = "../framebuffer"
hyperion-futures.path = "../futures"
hyperion-kernel-impl.path = "../kernel-impl"
hyperion-kernel-info.path = "../kernel-info"
hyperion-loader.path = "../loader"
hyperion-log.path = "../log"
hyperion-pci.path = "../pci"
hyperion-scheduler.path = "../scheduler"
hyperion-syscall.path = "../syscall"
hyperion-vfs.path = "../vfs"

fbtest = { path = "../../userspace/fbtest", artifact = "bin", target = "x86_64-unknown-none" }
sample-elf = { path = "../../userspace/sample-elf", artifact = "bin", target = "x86_64-unknown-none" }
coreutils = { path = "../../userspace/coreutils", artifact = "bin", target = "x86_64-unknown-none" }
