[package]
name = "hyperion-loader"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf.workspace = true
x86_64.workspace = true

hyperion-arch.path = "../arch"
hyperion-boot.path = "../boot"
hyperion-log.path = "../log"
hyperion-mem.path = "../mem"
hyperion-scheduler.path = "../scheduler"
