[package]
name = "hyperion-log-multi"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcstr.workspace = true
spin.workspace = true
crossbeam.workspace = true

hyperion-boot.path = "../boot"
hyperion-driver-qemu.path = "../driver-qemu"
hyperion-log.path = "../log"
hyperion-scheduler.path = "../scheduler"
