[package]
name = "hyperion-log"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcstr.workspace = true
spin.workspace = true

hyperion-escape.path = "../escape"
