[package]
name = "hyperion-macros"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
# syn = { version = "2.0", features = ["full"] }
syn = "2.0"
quote = "1.0"
# image = "0.24"
chrono = "0.4"
