[package]
name = "hyperion-mem"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck.workspace = true
spin.workspace = true
volatile.workspace = true
lock_api.workspace = true
x86_64.workspace = true

hyperion-boot.path = "../boot"
hyperion-boot-interface.path = "../boot-interface"
hyperion-bitmap.path = "../bitmap"
hyperion-num-postfix.path = "../num-postfix"
hyperion-log.path = "../log"
hyperion-slab-alloc = { path = "../slab-alloc" } # , features = ["log"]
hyperion-sync.path = "../sync"
