[package]
name = "hyperion-mem"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags.workspace = true
spin.workspace = true
x86_64.workspace = true

hyperion-boot.path = "../boot"
hyperion-boot-interface.path = "../boot-interface"
hyperion-num-postfix.path = "../num-postfix"
hyperion-log.path = "../log"
hyperion-slab-alloc = { path = "../slab-alloc" } # , features = ["log"]
hyperion-cpu-id.path = "../cpu-id"
