[package]
name = "hyperion-random"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin.workspace = true
blake3 = { version = "1.4", default-features = false }
# sha2 = { version = "0.10", default-features = false }
rand.workspace = true
rand_chacha.workspace = true

hyperion-log.path = "../log"
hyperion-macros.path = "../macros"
