[package]
name = "hyperion-random"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin.workspace = true
blake3.workspace = true
rand.workspace = true
rand_chacha.workspace = true

hyperion-macros.path = "../macros"
