[package]
name = "hyperion-scheduler"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin.workspace = true
futures-util.workspace = true
time.workspace = true
crossbeam-queue.workspace = true

hyperion-clock.path = "../clock"
hyperion-color.path = "../color"
hyperion-instant.path = "../instant"
hyperion-int-safe-lazy.path = "../int-safe-lazy"
hyperion-keyboard.path = "../keyboard"
hyperion-log.path = "../log"
hyperion-timer.path = "../timer"
